# gameScript

./: .gitignore
MSN/: app_const.py  application.py  bg_find_pic_area.py  demo1.py  i_keyboard.py  i_mouse.py  ms_auto.py  ms_quick.py  msn.py  readme.md  win_tool.py
daojian2/古城挖宝/: 古城挖宝.q
daojian2/古城捡卷/: readme.md  古城捡卷.q
daojian2/按键备份/: 上马.Q  全体上马和拾取.Q  前台按键.Q  古城挖宝.Q  古城捡卷.Q  后台按键.Q  多开接九凤任务.Q  打群侠.Q  拾取.Q  指定窗口后台按键.Q  挖甘草.Q  暴力拾取.Q  段位赛.Q  研磨.Q  背包遍历.Q  自动吃背包去凝神宝带.Q  识图.Q  鸟山挖矿.Q  鼠标右键点击.Q  鼠标左键点击.Q  鼠标点击.bak
daojian2/挖甘草/: readme.md  挖甘草.q
daojian2_py/dao2/: app.py  app_const.py  bg_find_pic.py  bg_find_pic_area.py  dao2_arena.py  dao2_common.py  dao2_control.py  dao2_control.spec  dao2_control_v0.51_back.py  dao2_da_qunxia.py  dao2_equipage.py  dao2_everyday.py  dao2_gu_cheng.py  dao2_gu_cheng_treasure.py  dao2_muye_fuwuqi.py  dao2_muye_fuwuqi_back.py  dao2_quick.py  dao2_six_contest.py  dao2_wa_baishu.py  dao2_wa_banxia.py  dao2_wa_chaihu.py  dao2_wa_chuanqiong.py  dao2_wa_dahuang.py  dao2_wa_danghuang.py  dao2_wa_gancao.py  dao2_wa_jinxianlian.py  dao2_wa_ma_huang.py  dao2_wa_niu_jin_cao.py  dao2_wa_shang_fu_zi.py  dao2_wa_wuweicao.py  dao2_wa_xi_hun_kuangshi.py  dao2_wk_hui_tong_kuang.py  dao_wa_gancao.py  demo.py  demo1.py  demo2.py  demo_bg_find_pic.py  demo_ocr.py  demo_temp.py  i_mouse.py  (+6 more)
daojian2_rs/f8/: Cargo.toml
daojian2_rs/f8/src/: main.rs
gamelib/: find_pic.py  win_tool.py
pmcWinTool/imageConversion/: main.py
pmcWinTool/scanRepeatFiles/: scanRepeatFiles.py
pmcWinTool/shanhetuzhiBox/: app_const.py  auto.py  readme.md  shanhetuzhi.py  (+2 more)
(+15 files in other folders)
